--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 body {
-    background-image: url("./imgs/background.jpg");
+    background-image: url("./imgs/background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .content-block {
